--- a/app/src/main/res/layout/vegetable_details_costumer.xml
+++ b/app/src/main/res/layout/vegetable_details_costumer.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:showIn="@layout/activity_vegetable_details"
+
     android:layout_height="wrap_content">
 
     <TextView
@@ -40,6 +40,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
+            android:id="@+id/costumerIncrement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
@@ -48,7 +49,7 @@
             android:textStyle="bold" />
 
         <TextView
-
+            android:id="@+id/customerNumberOfItems"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
@@ -59,6 +60,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/costumerDecrement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
@@ -68,14 +70,15 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/costumerBuyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="44dp"
         android:background="@drawable/company_color_back"
-        android:text="Sell"
+        android:text="Buy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="136dp" />
+        tools:layout_editor_absoluteX="148dp" />
 </android.support.constraint.ConstraintLayout>
