changed fruits and vegetable category

--- a/app/src/main/res/layout/fragment_vegetable_category.xml
+++ b/app/src/main/res/layout/fragment_vegetable_category.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.CategoryFragment">
+    tools:context=".fragments.VegetableCategoryFragment">
 
     <LinearLayout
         android:orientation="vertical"
