--- a/app/src/main/res/layout/categories_item.xml
+++ b/app/src/main/res/layout/categories_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_show_card"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:clickable="true"
@@ -12,17 +12,19 @@
     app:cardCornerRadius="4dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/categories_image_view"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:adjustViewBounds="true"
-            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/brinjal"
 
-          />
+            />
 
         <TextView
             android:id="@+id/categories_title_text_view"
@@ -33,7 +35,7 @@
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxLines="2"
-
+            android:text="afakjsbfkjbasf"
             android:textStyle="bold" />
 
 
