--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,10 +5,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
 
 
-    <dimen name="text_size_xsmall">8dp</dimen>
-    <dimen name="text_size_small">10dp</dimen>
-    <dimen name="text_size_medium">12dp</dimen>
-    <dimen name="text_size_xmedium">14dp</dimen>
-    <dimen name="text_size_large">16dp</dimen>
+    <dimen name="text_size_xsmall">8sp</dimen>
+    <dimen name="text_size_small">10sp</dimen>
+    <dimen name="text_size_medium">12sp</dimen>
+    <dimen name="text_size_xmedium">14sp</dimen>
+    <dimen name="text_size_large">16sp</dimen>
 
 </resources>
