--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -126,6 +126,15 @@
             android:paddingStart="8dp"
             android:text="@string/sign_up"
             android:textColor="#FFFF" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:onClick="alreadyAccount"
+            android:text="@string/already_have_an_account"/>
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
