--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#ffffff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">@color/companyColor</color>
     <color name="companyColor">#66df51</color>
     <color name="black">#000</color>
     <color name="colorWhite">#FFFF</color>
